--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,7 @@
 # (string) Title of your wiki
 title: HakoDocs
+repository: leogabac/hakodocs
+encoding: "utf-8"
 # (string) Description of your wiki
 description: 
 # (boolean) disable edit functionalities (edit/delete/add pages)
